--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 02:05:03 2018</p>
+         Last Run: Mon Nov 19 03:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -34,23 +34,23 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>3</td>
-                        <td>68</td>
-                        <td>0</td>
-                        <td>10</td>
-                        <td>W</td>
-                        <td>16</td>
-                     </tr>
-                     <tr>
-                        <td>10:00 PM</td>
-                        <td>Clear</td>
-                        <td>0</td>
-                        <td>-3</td>
-                        <td>3</td>
                         <td>69</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
                         <td>15</td>
+                     </tr>
+                     <tr>
+                        <td>10:00 PM</td>
+                        <td>Clear</td>
+                        <td>-1</td>
+                        <td>-4</td>
+                        <td>3</td>
+                        <td>70</td>
+                        <td>0</td>
+                        <td>10</td>
+                        <td>W</td>
+                        <td>14</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -62,7 +62,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>17</td>
+                        <td>16</td>
                      </tr>
                   </tbody>
                </table>
@@ -90,7 +90,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-3",
-                 "-3",
+                 "-4",
                  "-4"
                ]
              },
@@ -102,7 +102,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "0",
-                 "0",
+                 "-1",
                  "-1"
                ]
              }
@@ -171,8 +171,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "68",
                  "69",
+                 "70",
                  "69"
                ]
              },
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "16",
                  "15",
-                 "17"
+                 "14",
+                 "16"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 02:05:03 2018</p>
+         Last Run: Mon Nov 19 03:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -245,15 +245,15 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>2</td>
                         <td>-2</td>
                         <td>1</td>
                         <td>52</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>SSW</td>
-                        <td>57</td>
+                        <td>60</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -261,11 +261,11 @@
                         <td>2</td>
                         <td>-2</td>
                         <td>1</td>
-                        <td>56</td>
+                        <td>57</td>
                         <td>0</td>
                         <td>14</td>
                         <td>SSW</td>
-                        <td>54</td>
+                        <td>57</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -273,11 +273,11 @@
                         <td>1</td>
                         <td>-3</td>
                         <td>1</td>
-                        <td>60</td>
+                        <td>62</td>
                         <td>0</td>
                         <td>13</td>
                         <td>SSW</td>
-                        <td>49</td>
+                        <td>53</td>
                      </tr>
                   </tbody>
                </table>
@@ -387,8 +387,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "52",
-                 "56",
-                 "60"
+                 "57",
+                 "62"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "60",
                  "57",
-                 "54",
-                 "49"
+                 "53"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 02:05:03 2018</p>
+         Last Run: Mon Nov 19 03:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -464,11 +464,11 @@
                         <td>-3</td>
                         <td>-7</td>
                         <td>4</td>
-                        <td>72</td>
+                        <td>73</td>
                         <td>1</td>
                         <td>10</td>
                         <td>N</td>
-                        <td>62</td>
+                        <td>60</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -476,11 +476,11 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>4</td>
-                        <td>66</td>
+                        <td>67</td>
                         <td>1</td>
                         <td>11</td>
                         <td>E</td>
-                        <td>48</td>
+                        <td>47</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -499,12 +499,12 @@
                         <td>Partly Cloudy</td>
                         <td>-1</td>
                         <td>-4</td>
-                        <td>6</td>
+                        <td>4</td>
                         <td>63</td>
                         <td>0</td>
                         <td>10</td>
                         <td>ESE</td>
-                        <td>39</td>
+                        <td>40</td>
                      </tr>
                   </tbody>
                </table>
@@ -609,7 +609,7 @@
                  "4",
                  "4",
                  "4",
-                 "6"
+                 "4"
                ]
              },
              {
@@ -618,8 +618,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "72",
-                 "66",
+                 "73",
+                 "67",
                  "62",
                  "63"
                ]
@@ -630,10 +630,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "62",
-                 "48",
+                 "60",
+                 "47",
                  "40",
-                 "39"
+                 "40"
                ]
              }
            ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 02:05:03 2018</p>
+         Last Run: Mon Nov 19 03:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
