--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 06:05:07 2018</p>
+         Last Run: Mon Nov 19 07:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -32,11 +32,11 @@
                         <td>09:00 PM</td>
                         <td>Clear</td>
                         <td>0</td>
-                        <td>-3</td>
+                        <td>-4</td>
                         <td>3</td>
-                        <td>68</td>
+                        <td>70</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>W</td>
                         <td>22</td>
                      </tr>
@@ -46,7 +46,7 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>3</td>
-                        <td>69</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
@@ -58,7 +58,7 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>3</td>
-                        <td>68</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
@@ -89,7 +89,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-3",
+                 "-4",
                  "-4",
                  "-4"
                ]
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "68",
-                 "69",
-                 "68"
+                 "70",
+                 "70",
+                 "70"
                ]
              },
              {
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 06:05:07 2018</p>
+         Last Run: Mon Nov 19 07:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -246,24 +246,24 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>2</td>
-                        <td>-2</td>
+                        <td>3</td>
+                        <td>-1</td>
                         <td>0</td>
                         <td>52</td>
                         <td>0</td>
                         <td>16</td>
                         <td>SSW</td>
-                        <td>62</td>
+                        <td>61</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>2</td>
                         <td>-2</td>
-                        <td>1</td>
+                        <td>0</td>
                         <td>57</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>SSW</td>
                         <td>59</td>
                      </tr>
@@ -304,7 +304,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-2",
+                 "-1",
                  "-2",
                  "-3"
                ]
@@ -316,7 +316,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "2",
+                 "3",
                  "2",
                  "1"
                ]
@@ -376,7 +376,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "0",
-                 "1",
+                 "0",
                  "1"
                ]
              },
@@ -397,7 +397,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "62",
+                 "61",
                  "59",
                  "57"
                ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 06:05:07 2018</p>
+         Last Run: Mon Nov 19 07:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -464,23 +464,23 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>3</td>
-                        <td>69</td>
+                        <td>70</td>
                         <td>1</td>
                         <td>10</td>
-                        <td>N</td>
-                        <td>50</td>
+                        <td>E</td>
+                        <td>48</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-1</td>
-                        <td>-5</td>
+                        <td>-2</td>
+                        <td>-6</td>
                         <td>3</td>
-                        <td>63</td>
+                        <td>65</td>
                         <td>1</td>
                         <td>11</td>
-                        <td>E</td>
-                        <td>32</td>
+                        <td>ESE</td>
+                        <td>31</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -488,10 +488,10 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>2</td>
-                        <td>59</td>
+                        <td>61</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>E</td>
+                        <td>ESE</td>
                         <td>21</td>
                      </tr>
                      <tr>
@@ -499,8 +499,8 @@
                         <td>Clear</td>
                         <td>-1</td>
                         <td>-4</td>
-                        <td>4</td>
-                        <td>59</td>
+                        <td>3</td>
+                        <td>62</td>
                         <td>0</td>
                         <td>10</td>
                         <td>ESE</td>
@@ -533,7 +533,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-6",
-                 "-5",
+                 "-6",
                  "-4",
                  "-4"
                ]
@@ -546,7 +546,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-2",
-                 "-1",
+                 "-2",
                  "-1",
                  "-1"
                ]
@@ -609,7 +609,7 @@
                  "3",
                  "3",
                  "2",
-                 "4"
+                 "3"
                ]
              },
              {
@@ -618,10 +618,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "69",
-                 "63",
-                 "59",
-                 "59"
+                 "70",
+                 "65",
+                 "61",
+                 "62"
                ]
              },
              {
@@ -630,8 +630,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "50",
-                 "32",
+                 "48",
+                 "31",
                  "21",
                  "19"
                ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 06:05:07 2018</p>
+         Last Run: Mon Nov 19 07:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -695,14 +695,14 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-1</td>
-                        <td>-4</td>
+                        <td>-2</td>
+                        <td>-6</td>
                         <td>10</td>
-                        <td>65</td>
+                        <td>66</td>
                         <td>1</td>
                         <td>10</td>
                         <td>WNW</td>
-                        <td>52</td>
+                        <td>51</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -753,7 +753,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-4",
+                 "-6",
                  "-3",
                  "-3"
                ]
@@ -765,7 +765,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-1",
+                 "-2",
                  "0",
                  "0"
                ]
@@ -835,7 +835,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "65",
+                 "66",
                  "62",
                  "59"
                ]
@@ -846,7 +846,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "52",
+                 "51",
                  "50",
                  "48"
                ]
