--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 07:05:07 2018</p>
+         Last Run: Mon Nov 19 08:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>0</td>
                         <td>-4</td>
                         <td>3</td>
-                        <td>70</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>22</td>
+                        <td>20</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -46,23 +46,23 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>3</td>
-                        <td>70</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>19</td>
+                        <td>18</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
                         <td>-1</td>
                         <td>-4</td>
-                        <td>3</td>
-                        <td>70</td>
+                        <td>2</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>WSW</td>
-                        <td>17</td>
+                        <td>W</td>
+                        <td>16</td>
                      </tr>
                   </tbody>
                </table>
@@ -162,7 +162,7 @@
                "data":[
                  "3",
                  "3",
-                 "3"
+                 "2"
                ]
              },
              {
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "70",
-                 "70",
-                 "70"
+                 "69",
+                 "69",
+                 "69"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "22",
-                 "19",
-                 "17"
+                 "20",
+                 "18",
+                 "16"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 07:05:07 2018</p>
+         Last Run: Mon Nov 19 08:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -249,23 +249,23 @@
                         <td>3</td>
                         <td>-1</td>
                         <td>0</td>
-                        <td>52</td>
-                        <td>0</td>
-                        <td>16</td>
-                        <td>SSW</td>
-                        <td>61</td>
-                     </tr>
-                     <tr>
-                        <td>10:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>2</td>
-                        <td>-2</td>
-                        <td>0</td>
                         <td>57</td>
                         <td>0</td>
                         <td>16</td>
                         <td>SSW</td>
-                        <td>59</td>
+                        <td>63</td>
+                     </tr>
+                     <tr>
+                        <td>10:00 PM</td>
+                        <td>Mostly Cloudy</td>
+                        <td>2</td>
+                        <td>-2</td>
+                        <td>1</td>
+                        <td>60</td>
+                        <td>0</td>
+                        <td>16</td>
+                        <td>SSW</td>
+                        <td>61</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -273,11 +273,11 @@
                         <td>1</td>
                         <td>-3</td>
                         <td>1</td>
-                        <td>62</td>
+                        <td>64</td>
                         <td>0</td>
                         <td>14</td>
                         <td>SSW</td>
-                        <td>57</td>
+                        <td>59</td>
                      </tr>
                   </tbody>
                </table>
@@ -376,7 +376,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "0",
-                 "0",
+                 "1",
                  "1"
                ]
              },
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "52",
                  "57",
-                 "62"
+                 "60",
+                 "64"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "63",
                  "61",
-                 "59",
-                 "57"
+                 "59"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 07:05:07 2018</p>
+         Last Run: Mon Nov 19 08:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -461,14 +461,14 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-2</td>
-                        <td>-6</td>
+                        <td>-3</td>
+                        <td>-7</td>
                         <td>3</td>
                         <td>70</td>
                         <td>1</td>
                         <td>10</td>
                         <td>E</td>
-                        <td>48</td>
+                        <td>49</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -479,18 +479,18 @@
                         <td>65</td>
                         <td>1</td>
                         <td>11</td>
-                        <td>ESE</td>
+                        <td>SE</td>
                         <td>31</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Clear</td>
                         <td>-1</td>
-                        <td>-4</td>
-                        <td>2</td>
+                        <td>-5</td>
+                        <td>3</td>
                         <td>61</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>ESE</td>
                         <td>21</td>
                      </tr>
@@ -532,9 +532,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
+                 "-7",
                  "-6",
-                 "-6",
-                 "-4",
+                 "-5",
                  "-4"
                ]
              },
@@ -545,7 +545,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-2",
+                 "-3",
                  "-2",
                  "-1",
                  "-1"
@@ -608,7 +608,7 @@
                "data":[
                  "3",
                  "3",
-                 "2",
+                 "3",
                  "3"
                ]
              },
@@ -630,7 +630,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "48",
+                 "49",
                  "31",
                  "21",
                  "19"
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 07:05:07 2018</p>
+         Last Run: Mon Nov 19 08:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -713,7 +713,7 @@
                         <td>62</td>
                         <td>1</td>
                         <td>10</td>
-                        <td>WNW</td>
+                        <td>NW</td>
                         <td>50</td>
                      </tr>
                      <tr>
@@ -724,7 +724,7 @@
                         <td>3</td>
                         <td>59</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>NW</td>
                         <td>48</td>
                      </tr>
